src/objects/verifydata__c.object
<CustomObject>
    <fields>
        <fullName>SalesforceID__c</fullName>
        <label>SalesforceID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TolvenReportID__c</fullName>
        <label>TolvenReportID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectName__c</fullName>
        <label>objectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesforcestatus__c</fullName>
        <label>salesforcestatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subjectID__c</fullName>
        <label>subjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tolvenstatus__c</fullName>
        <label>tolvenstatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>verifydata</label>
    <nameField>
        <label>verifydata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>verifydata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>